--- a/TestTool/App.xaml
+++ b/TestTool/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="ProcessControlStandarts.OPC.TestTool.App"
+﻿<Application x:Class="ProcessControlStandards.OPC.TestTool.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
