--- a/TestTool/MainWindow.xaml
+++ b/TestTool/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ProcessControlStandarts.OPC.TestTool.MainWindow"
+﻿<Window x:Class="ProcessControlStandards.OPC.TestTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:Models="clr-namespace:ProcessControlStandarts.OPC.TestTool.Models"
-        xmlns:Commands="clr-namespace:ProcessControlStandarts.OPC.TestTool.Commands"
+        xmlns:Models="clr-namespace:ProcessControlStandards.OPC.TestTool.Models"
+        xmlns:Commands="clr-namespace:ProcessControlStandards.OPC.TestTool.Commands"
         Title="MainWindow" Height="361" Width="531">
 	<Xctk:BusyIndicator x:Name="_busyIndicator">
 		<Grid>
