--- a/TestTool/ServerProperties.xaml
+++ b/TestTool/ServerProperties.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ProcessControlStandarts.OPC.TestTool.ServerProperties"
+﻿<Window x:Class="ProcessControlStandards.OPC.TestTool.ServerProperties"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="ServerProperties" Height="300" Width="300">
