--- a/TestTool/DAGroupProperties.xaml
+++ b/TestTool/DAGroupProperties.xaml
@@ -1,13 +1,15 @@
 ﻿<Window x:Class="ProcessControlStandards.OPC.TestTool.DAGroupProperties"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="GroupProperties" Height="300" Width="300">
+        Title="DA Group properties" Height="500" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="40" />
         </Grid.RowDefinitions>
         <xctk:PropertyGrid x:Name="_propertyGrid" Grid.Row="0"/>
-        <Button Grid.Row="1"></Button>
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <Button x:Name="_acceptButton"  Click="OnAcceptButton" Margin="5" Padding="5">Create</Button>
+        </StackPanel>
     </Grid>
 </Window>
