--- a/TestTool/MainWindow.xaml
+++ b/TestTool/MainWindow.xaml
@@ -1,17 +1,20 @@
 ﻿<Window x:Class="ProcessControlStandards.OPC.TestTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:Models="clr-namespace:ProcessControlStandards.OPC.TestTool.Models"
-        xmlns:Commands="clr-namespace:ProcessControlStandards.OPC.TestTool.Commands"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:models="clr-namespace:ProcessControlStandards.OPC.TestTool.Models"
+        xmlns:commands="clr-namespace:ProcessControlStandards.OPC.TestTool.Commands"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
         Title="MainWindow" Height="361" Width="531">
-	<Xctk:BusyIndicator x:Name="_busyIndicator">
+	<xctk:BusyIndicator x:Name="_busyIndicator">
 		<Grid>
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="30*" />
 				<ColumnDefinition Width="70*" />
 			</Grid.ColumnDefinitions>
-			<TreeView x:Name="_serversTree" ItemsSource="{Binding Children}" Grid.Column="0" Margin="0, 0, 4, 0" >
+			<TreeView x:Name="_serversTree" ItemsSource="{Binding Children}" Grid.Column="0" Margin="0, 0, 4, 0"
+			          d:DataContext="{d:DesignInstance models:Node }" SelectedValuePath="DetailsView">
 				<TreeView.ItemContainerStyle>
 					<Style TargetType="{x:Type TreeViewItem}">
 						<Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
@@ -19,7 +22,7 @@
 					</Style>
 				</TreeView.ItemContainerStyle>
 				<TreeView.ItemTemplate>
-					<HierarchicalDataTemplate ItemsSource="{Binding Children}" DataType="Models:Node">
+					<HierarchicalDataTemplate ItemsSource="{Binding Children}" DataType="models:Node">
 						<StackPanel Orientation="Horizontal">
 							<StackPanel.ContextMenu>
 								<ContextMenu ItemsSource="{Binding Commands}">
@@ -27,7 +30,7 @@
 										<Style TargetType="{x:Type MenuItem}" >
 											<Setter Property="Command" Value="{Binding}"/>
 											<Setter Property="Header" Value="{Binding Name}"/>
-											<Setter Property="Commands:BoundCommand.Parameter" Value="{Binding Path=DataContext, RelativeSource={RelativeSource AncestorType={x:Type TreeViewItem}}}"/>
+											<Setter Property="commands:BoundCommand.Parameter" Value="{Binding Path=DataContext, RelativeSource={RelativeSource AncestorType={x:Type TreeViewItem}}}"/>
 										</Style>
 									</ContextMenu.ItemContainerStyle>
 								</ContextMenu>
@@ -39,14 +42,13 @@
 				</TreeView.ItemTemplate>
 			</TreeView>
 			<GridSplitter Width="4" Grid.Column="0" />
-			<TabControl Grid.Column="1">
-				<TabItem Header="TabItem">
-					<Grid Background="#FFE5E5E5"/>
-				</TabItem>
-				<TabItem Header="TabItem">
-					<Grid Background="#FFE5E5E5"/>
-				</TabItem>
-			</TabControl>
+            <Frame Grid.Column="1" 
+                   Source="{Binding ElementName=_serversTree, Path=SelectedValue.(models:NodeDetailsView.Page) }" 
+                   DataContext="{Binding ElementName=_serversTree, Path=SelectedValue.(models:NodeDetailsView.Data) }"
+                   NavigationUIVisibility="Hidden"
+                   LoadCompleted="DetailsViewLoadCompleted"
+                   DataContextChanged="DetailsViewDataContextChanged">
+            </Frame>
 		</Grid>
-	</Xctk:BusyIndicator>
+	</xctk:BusyIndicator>
 </Window>
